[gd_scene load_steps=45 format=3 uid="uid://dufpfjbbnms4o"]

[ext_resource type="Script" path="res://Scripits/GUI/menu_manager.gd" id="1_g0dvu"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://joystick/virtual_joystick.tscn" id="2_7xvjj"]
[ext_resource type="Script" path="res://Scripits/GUI/sicks.gd" id="2_k4bfr"]
[ext_resource type="PackedScene" uid="uid://c8b7sxc0e6j7w" path="res://Objects/hud.tscn" id="3_xrel2"]
[ext_resource type="Script" path="res://Scripits/GUI/hud_xp.gd" id="4_fh5v3"]
[ext_resource type="Script" path="res://Scripits/GUI/stage_timer.gd" id="4_it7su"]
[ext_resource type="Script" path="res://Scripits/GUI/health_label.gd" id="5_fu2ar"]
[ext_resource type="Script" path="res://Objects/GUI/seconds_timer.gd" id="5_uqkxn"]
[ext_resource type="PackedScene" uid="uid://7y78wcnmvbd3" path="res://Objects/GUI/upgrade_menu.tscn" id="6_ex6gh"]
[ext_resource type="Script" path="res://Scripits/GUI/upgrade_points_counter.gd" id="7_5e6md"]
[ext_resource type="Script" path="res://Scripits/GUI/ability_hud.gd" id="7_ovuu8"]
[ext_resource type="Texture2D" uid="uid://clt5ki8xow54h" path="res://Art/GUI/Icons/fire.png" id="8_keuw0"]
[ext_resource type="Texture2D" uid="uid://bsa3rai1ow8co" path="res://Art/Equipment/ice_crown.png" id="8_pj8fp"]
[ext_resource type="Script" path="res://Scripits/Abilities/ability_resource.gd" id="9_qo8gk"]
[ext_resource type="Script" path="res://Scripits/GUI/end_screen.gd" id="9_ygsdw"]
[ext_resource type="Texture2D" uid="uid://cl8kw84gumvjv" path="res://Art/Equipment/potion_amulet.png" id="10_1umne"]
[ext_resource type="Texture2D" uid="uid://drjhrt5330mp6" path="res://Art/Equipment/silver_ring.png" id="11_g00cx"]
[ext_resource type="Texture2D" uid="uid://djus01x5bmgnl" path="res://Art/Equipment/crown1.png" id="12_p4beq"]
[ext_resource type="Script" path="res://Scripits/GUI/upgrade_menu_button.gd" id="16_qjcyp"]
[ext_resource type="Texture2D" uid="uid://bj6qsceygh7sv" path="res://Art/GUI/Icons/fire_muted.png" id="17_j2ngq"]
[ext_resource type="Script" path="res://Scripits/GUI/end_of_combat_gear_menu.gd" id="18_gl4db"]
[ext_resource type="Script" path="res://Scripits/Main Menu/selected_item_info.gd" id="19_u2y5s"]
[ext_resource type="Script" path="res://Scripits/Main Menu/selected_item_options.gd" id="20_7jkjo"]
[ext_resource type="Texture2D" uid="uid://b72lsyuegw6r6" path="res://Art/Bubble.png" id="21_vjsji"]

[sub_resource type="LabelSettings" id="LabelSettings_mpb71"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_pny5a"]
font_size = 40

[sub_resource type="Gradient" id="Gradient_1n4kt"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_r8fpc"]
gradient = SubResource("Gradient_1n4kt")

[sub_resource type="Gradient" id="Gradient_lclo7"]
offsets = PackedFloat32Array(0, 0.815303)
colors = PackedColorArray(0, 0.0392157, 0.560784, 1, 0, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_odfqw"]
gradient = SubResource("Gradient_lclo7")

[sub_resource type="SystemFont" id="SystemFont_ati7y"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_0ko77"]
font = SubResource("SystemFont_ati7y")
font_size = 25
shadow_color = Color(0, 0, 0, 0.698039)

[sub_resource type="LabelSettings" id="LabelSettings_e6rqp"]
font_size = 30

[sub_resource type="Resource" id="Resource_q4byp"]
script = ExtResource("9_qo8gk")
ability_name = "abilty 1"
ability_icon = ExtResource("8_pj8fp")

[sub_resource type="Resource" id="Resource_ahdpx"]
script = ExtResource("9_qo8gk")
ability_name = "ability 2"
ability_icon = ExtResource("10_1umne")

[sub_resource type="Resource" id="Resource_6phji"]
script = ExtResource("9_qo8gk")
ability_name = "ability 3"
ability_icon = ExtResource("11_g00cx")

[sub_resource type="Resource" id="Resource_2gskj"]
script = ExtResource("9_qo8gk")
ability_name = "ability 4"
ability_icon = ExtResource("12_p4beq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m8fmg"]

[sub_resource type="SystemFont" id="SystemFont_oi2go"]
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tga6w"]
bg_color = Color(0.231373, 0.231373, 0.231373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apyte"]
bg_color = Color(0.258824, 0.258824, 0.258824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nevs3"]
bg_color = Color(0.0901961, 0.211765, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojpwk"]
bg_color = Color(0.0823529, 0.113725, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wbgpc"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_g0dvu")

[node name="TouchSticks" type="Control" parent="."]
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_top = 960.0
offset_right = 720.0
offset_bottom = 1280.0

[node name="Test" type="Node2D" parent="TouchSticks"]

[node name="Sticks" type="CanvasLayer" parent="TouchSticks/Test"]
layer = 0
script = ExtResource("2_k4bfr")

[node name="Virtual joystick left" parent="TouchSticks/Test/Sticks" instance=ExtResource("2_7xvjj")]
offset_top = -512.0
offset_right = 360.0
offset_bottom = 8.0
joystick_mode = 1
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="Virtual joystick right" parent="TouchSticks/Test/Sticks" instance=ExtResource("2_7xvjj")]
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = -512.0
offset_right = -8.0
offset_bottom = -104.0
grow_horizontal = 0
joystick_mode = 1
visibility_mode = 1
action_left = "aim_left"
action_right = "aim_right"
action_up = "aim_up"
action_down = "aim_down"

[node name="Seperator" type="Line2D" parent="TouchSticks/Test/Sticks"]
points = PackedVector2Array(360, 1280, 360, 768)
width = 2.0
default_color = Color(1, 1, 1, 0.490196)

[node name="HUD" parent="." instance=ExtResource("3_xrel2")]
texture_filter = 1
offset_right = 720.0
offset_bottom = 1280.0

[node name="Boss HP Bar Pos" type="Node2D" parent="HUD"]
position = Vector2(0, 160)

[node name="Timer" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_top = 16.0
offset_right = 104.0
offset_bottom = 80.0
grow_horizontal = 2
text = "99:99"
label_settings = SubResource("LabelSettings_mpb71")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_it7su")

[node name="Seconds Timer" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 96.0
offset_top = 24.0
offset_right = 240.0
offset_bottom = 82.0
grow_horizontal = 2
text = "000"
label_settings = SubResource("LabelSettings_pny5a")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_uqkxn")

[node name="XP Bar" type="TextureProgressBar" parent="HUD"]
layout_mode = 2
offset_top = 97.0
offset_right = 720.0
offset_bottom = 115.0
value = 80.0
rounded = true
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_r8fpc")
texture_progress = SubResource("GradientTexture1D_odfqw")
script = ExtResource("4_fh5v3")

[node name="Panel" type="Panel" parent="HUD/XP Bar"]
z_as_relative = false
layout_mode = 0
offset_left = -3.0
offset_top = 15.0
offset_right = 194.0
offset_bottom = 55.0

[node name="XP Counter" type="Label" parent="HUD/XP Bar/Panel"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 3.0
offset_right = 189.0
offset_bottom = 52.0
text = "0/12"
label_settings = SubResource("LabelSettings_0ko77")
vertical_alignment = 1
autowrap_mode = 1

[node name="Top Bar" type="PanelContainer" parent="HUD"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
offset_right = 720.0
offset_bottom = 98.0

[node name="Health Label" type="Label" parent="HUD"]
texture_filter = 1
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 184.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "Health"
label_settings = SubResource("LabelSettings_e6rqp")
uppercase = true
script = ExtResource("5_fu2ar")

[node name="Abilty HUD" type="Control" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -96.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("7_ovuu8")
abilities_array = Array[ExtResource("9_qo8gk")]([SubResource("Resource_q4byp"), SubResource("Resource_ahdpx"), SubResource("Resource_6phji"), SubResource("Resource_2gskj")])

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Abilty HUD"]
layout_mode = 0
offset_top = 8.0
offset_right = 360.0
offset_bottom = 88.0
theme_override_constants/separation = 11

[node name="CanvasLayer" type="CanvasLayer" parent="HUD"]

[node name="Upgrade Menu Button" type="TouchScreenButton" parent="HUD/CanvasLayer"]
position = Vector2(592, 1152)
texture_normal = ExtResource("8_keuw0")
texture_pressed = ExtResource("8_keuw0")
visibility_mode = 1
script = ExtResource("16_qjcyp")
default_icon = ExtResource("8_keuw0")
dim_icon = ExtResource("17_j2ngq")

[node name="Uprade Menu" parent="." instance=ExtResource("6_ex6gh")]
visible = false
offset_top = 112.0

[node name="Upgrade Options Panel" parent="Uprade Menu" index="1"]
offset_top = 40.0
offset_bottom = 920.0

[node name="Reroll" parent="Uprade Menu" index="2"]
offset_top = 936.0
offset_bottom = 1000.0

[node name="Quit" parent="Uprade Menu" index="3"]
offset_left = 552.0
offset_top = -112.0
offset_bottom = -56.0
focus_neighbor_bottom = NodePath("../Confirm")

[node name="Upgrade Points Counter" type="Label" parent="."]
offset_left = 8.0
offset_top = 120.0
offset_right = 192.0
offset_bottom = 152.0
text = "Pts: "
script = ExtResource("7_5e6md")

[node name="End Screen" type="CanvasLayer" parent="."]
layer = 50

[node name="End Screen" type="Control" parent="End Screen"]
visible = false
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0
script = ExtResource("9_ygsdw")

[node name="Background" type="Panel" parent="End Screen/End Screen"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
theme_override_styles/panel = SubResource("StyleBoxFlat_m8fmg")

[node name="Title" type="Label" parent="End Screen/End Screen"]
layout_mode = 0
offset_left = 88.0
offset_top = 32.0
offset_right = 640.0
offset_bottom = 184.0
theme_override_fonts/font = SubResource("SystemFont_oi2go")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_tga6w")
text = "Title Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info Label" type="Label" parent="End Screen/End Screen"]
layout_mode = 0
offset_left = 88.0
offset_top = 192.0
offset_right = 640.0
offset_bottom = 344.0
theme_override_fonts/font = SubResource("SystemFont_oi2go")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_apyte")
text = "Info box"

[node name="Return to Main Menu" type="Button" parent="End Screen/End Screen"]
layout_mode = 0
offset_left = 184.0
offset_top = 1176.0
offset_right = 544.0
offset_bottom = 1256.0
theme_override_font_sizes/font_size = 30
text = "Return to menu"

[node name="Gear Menu" type="Control" parent="End Screen/End Screen"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_top = 352.0
offset_right = 712.0
offset_bottom = 1168.0
script = ExtResource("18_gl4db")

[node name="Item Info" type="Panel" parent="End Screen/End Screen/Gear Menu"]
layout_mode = 0
offset_left = 24.0
offset_right = 696.0
offset_bottom = 352.0
script = ExtResource("19_u2y5s")

[node name="Name" type="Label" parent="End Screen/End Screen/Gear Menu/Item Info"]
layout_mode = 0
offset_right = 296.0
offset_bottom = 40.0
theme_override_styles/normal = SubResource("StyleBoxFlat_nevs3")

[node name="Description" type="Label" parent="End Screen/End Screen/Gear Menu/Item Info"]
layout_mode = 0
offset_top = 56.0
offset_right = 296.0
offset_bottom = 152.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ojpwk")
autowrap_mode = 2

[node name="Mod list" type="RichTextLabel" parent="End Screen/End Screen/Gear Menu/Item Info"]
layout_mode = 0
offset_left = 304.0
offset_top = 8.0
offset_right = 664.0
offset_bottom = 272.0

[node name="Selected Item Options" type="HBoxContainer" parent="End Screen/End Screen/Gear Menu"]
layout_mode = 0
offset_left = 40.0
offset_top = 280.0
offset_right = 680.0
offset_bottom = 344.0
theme_override_constants/separation = 65
script = ExtResource("20_7jkjo")

[node name="Equip" type="Button" parent="End Screen/End Screen/Gear Menu/Selected Item Options"]
visible = false
custom_minimum_size = Vector2(170.29, 0)
layout_mode = 2
text = "Equip"

[node name="Craft" type="Button" parent="End Screen/End Screen/Gear Menu/Selected Item Options"]
visible = false
custom_minimum_size = Vector2(170.29, 0)
layout_mode = 2
text = "Craft"

[node name="Delete" type="Button" parent="End Screen/End Screen/Gear Menu/Selected Item Options"]
custom_minimum_size = Vector2(170.29, 0)
layout_mode = 2
text = "Delete"

[node name="ScrollContainer" type="ScrollContainer" parent="End Screen/End Screen/Gear Menu"]
layout_mode = 2
offset_left = 24.0
offset_top = 368.0
offset_right = 702.0
offset_bottom = 800.0
horizontal_scroll_mode = 0

[node name="Item List" type="ItemList" parent="End Screen/End Screen/Gear Menu/ScrollContainer"]
custom_minimum_size = Vector2(670, 0)
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
theme_override_constants/outline_size = 1
max_text_lines = 2
auto_height = true
item_count = 5
max_columns = 5
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2i(120, 120)
item_0/text = ""
item_0/icon = ExtResource("21_vjsji")
item_1/text = ""
item_1/icon = ExtResource("21_vjsji")
item_2/text = ""
item_2/icon = ExtResource("21_vjsji")
item_3/text = ""
item_3/icon = ExtResource("21_vjsji")
item_4/text = ""
item_4/icon = ExtResource("21_vjsji")

[node name="No Gear Warning" type="Label" parent="End Screen/End Screen/Gear Menu"]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 632.0
offset_right = 712.0
offset_bottom = 1144.0
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_wbgpc")
text = "Your inventory is empty"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HUD/CanvasLayer/Upgrade Menu Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="End Screen/End Screen/Return to Main Menu" to="End Screen/End Screen" method="return_to_main_menu"]
[connection signal="pressed" from="End Screen/End Screen/Gear Menu/Selected Item Options/Equip" to="End Screen/End Screen/Gear Menu" method="on_equip_button_pressed"]
[connection signal="pressed" from="End Screen/End Screen/Gear Menu/Selected Item Options/Craft" to="End Screen/End Screen/Gear Menu" method="_on_craft_pressed"]
[connection signal="pressed" from="End Screen/End Screen/Gear Menu/Selected Item Options/Delete" to="End Screen/End Screen/Gear Menu" method="remove_selected_item"]
[connection signal="item_selected" from="End Screen/End Screen/Gear Menu/ScrollContainer/Item List" to="End Screen/End Screen/Gear Menu" method="_on_item_list_item_selected"]

[editable path="Uprade Menu"]
